# ForgeSDK

./: .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  codespell.ignore  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml
tests/: test_placeholder.py
